# CGE

./: .gitignore  .gitmodules  README.md  TODO
Docs/Guides/: CodeStyle.txt
Docs/SoftwareEngineering/: SoftwareEngineering.vpp  SoftwareEngineering.vpp~163  SoftwareEngineering.vpp~164  SoftwareEngineering.vux
Project/: .gitignore  CMakeLists.txt
Project/Components/: CMakeLists.txt  TODO
Project/Components/RenderEngine/Include/: ResourceEngineSetup.h
Project/Components/RenderEngine/Project/: RenderEngine.vcxproj  RenderEngine.vcxproj.filters
Project/Components/ResourceEngine/: CMakeLists.txt  TODO
Project/Components/ResourceEngine/Include/: GLSLResourceData.h  GLSLResourceLoader.h  GraphicModelResourceData.h  GraphicModelResourceLoader.h  IResourceCache.h  IResourceData.h  IResourceLoader.h  IResourceObserver.h  ImageResourceData.h  ImageResourceLoader.h  MaterialResourceData.h  MeshNodeResourceData.h  MeshResourceData.h  Resource.h  ResourceCache.h  ResourceCacheOutOfMemoryException.h  ResourceEngineSetup.h  ResourceHandle.h  ResourceLoaderNotFoundException.h  SimpleResourceCache.h  TypesExport.h
Project/Components/ResourceEngine/Project/: ResourceEngine.filters  ResourceEngine.vcxproj  ResourceEngine.vcxproj.filters
Project/Components/ResourceEngine/Source/: GLSLResourceData.cpp  GLSLResourceLoader.cpp  GraphicModelResourceData.cpp  GraphicModelResourceLoader.cpp  ImageResourceData.cpp  ImageResourceLoader.cpp  MaterialResourceData.cpp  MeshNodeResourceData.cpp  MeshResourceData.cpp  Resource.cpp  ResourceCache.cpp  ResourceCacheOutOfMemoryException.cpp  ResourceHandle.cpp  ResourceLoaderNotFoundException.cpp  SimpleResourceCache.cpp
Project/Components/SME/: CMakeLists.txt
Project/Components/SME/Include/: Contants.h  Definitions.h  Functions.h  Matrix.h  Quaternion.h  SME.h  SimpleMathEngine.h  SimpleMathEngineSetup.h  Transform.hpp  Transform.inl  Vector.h
Project/Components/SME/Project/: SME.filters  SME.vcxproj  SME.vcxproj.filters
Project/Components/SME/Source/: Matrix.cpp  Quaternion.cpp  Vector.cpp
Project/Components/Utilities/: CMakeLists.txt
Project/Components/Utilities/Include/: BaseException.h  File.h  FileNotFoundException.h  FileNotFoundExceptionException.h  Memory.hpp  MethodNotImplementedException.h  String.h  Timer.h  UtilitiesSetup.h
Project/Components/Utilities/Project/: Utilities.vcxproj  Utilities.vcxproj.filters
Project/Components/Utilities/Source/: BaseException.cpp  File.cpp  FileNotFoundException.cpp  FileNotFoundExceptionException.cpp  MethodNotImplementedException.cpp  String.cpp  Timer.cpp
Project/Components/WindowSystem/: CMakeLists.txt
Project/Components/WindowSystem/Include/: IEvent.h  IEventDispatcher.h  IEventHandler.h  IInputDevice.h  IInputEvent.h  IInputEventArgument.h  IInputListener.h  IMouseInputDeviceImplementation.h  IWindowFactory.h  MouseButton.h  MouseInputDevice.h  Window.hpp  WindowSystemSetup.h
Project/Components/WindowSystem/Include/glfw/: Window.h  WindowFactory.h
Project/Components/WindowSystem/Project/: WindowSystem.vcxproj  WindowSystem.vcxproj.filters
Project/Components/WindowSystem/Source/: MouseInputDevice.cpp
Project/Components/WindowSystem/Source/glfw/: Window.cpp  WindowFactory.cpp
Project/Samples/: CMakeLists.txt
Project/Samples/BasicWindow/: CMakeLists.txt
Project/Samples/BasicWindow/Project/: BasicWindow.vcxproj  BasicWindow.vcxproj.filters
Project/Samples/BasicWindow/Source/: Main.cpp
Project/Solution/VS2013/CGE/: CGE.sln
Project/Tests/: CMakeLists.txt
Project/Tests/ResourceEngineTest/: CMakeLists.txt
Project/Tests/ResourceEngineTest/Include/: Application.h  GLUtil.h  GraphicsResourceAdapter.h  IRenderable.h  IndexedMesh.h  LoadShaderTest.h  Mesh.h  ShaderProgram.h  Triangle.h  Window.h
Project/Tests/ResourceEngineTest/Project/VS2013/: ResourceEngineTest.vcxproj  ResourceEngineTest.vcxproj.filters
Project/Tests/ResourceEngineTest/Resources/Shaders/: simpleFragmentShader.fs  simpleVertexShader.vs
Project/Tests/ResourceEngineTest/Source/: Application.cpp  GLUtil.cpp  GraphicsResourceAdapter.cpp  IndexedMesh.cpp  LoadShaderTest.cpp  Main.cpp  Mesh.cpp  ShaderProgram.cpp  Triangle.cpp  Window.cpp
Project/Tests/SMEUnitTesting/: CMakeLists.txt  SMEUnitTesting.vcxproj  SMEUnitTesting.vcxproj.filters
Project/Tests/SMEUnitTesting/Project/VS2013/: SMEUnitTesting.vcxproj  SMEUnitTesting.vcxproj.filters
Project/Tests/SMEUnitTesting/Source/: Main.cpp  Matrix2Tests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  Vec2Tests.cpp  Vec3Tests.cpp  Vec4Tests.cpp
Project/Tests/UtilitiesTest/: CMakeLists.txt
Project/Tests/UtilitiesTest/Include/: FileTest.h  StringTest.h
Project/Tests/UtilitiesTest/Project/VS2013/: UtilitiesTest.vcxproj  UtilitiesTest.vcxproj.filters
Project/Tests/UtilitiesTest/Source/: FileTest.cpp  Main.cpp  StringTest.cpp
Project/cmake/: ThirdParty.cmake  Util.cmake
Utilities/ProjectTemplates/: TODO  readme.txt
